--- a/flock/static/css/style.css
+++ b/flock/static/css/style.css
@@ -8387,18 +8387,42 @@ body.md-skin {
     right: 5px;
     bottom: 5px;
 }
+.event_details{
+    width: 100%;
+    height: 200px;
+    display: none;
+}
 .fc-month-view .event_people, .fc-agendaWeek-view .event_people{
     display: none;
 }
-.fc-event:hover{
-    z-index: 100 !important;
+.fc-event.hover{
+    background-color: #17A689 !important;
+    border-color: #17A689 !important;
+}
+.fc-event.active{
+    font-weight: normal !important;
+    z-index: 200 !important;
+    opacity: 1 !important;
+    min-height: 90px;
+    min-width: 200px;
+}
+.fc-event.active .event_people{
+    display: none;
+}
+.fc-event.active .event_details{
+    display: block;
 }
 .event_tip{
     background-color: white;
     padding: 0px;
 }
-.event_tip .event_people_wrap{
-    margin-top: 5px;
+.event_details .edit-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.event_details .event_people_wrap, .event_details .event_place_wrap{
+    margin-top: 10px;
 }
 .event_tip .event_people_wrap span{
     margin-bottom: 2px;
@@ -8567,6 +8591,33 @@ ul.slim-dropdown-menu .label{
     color: white;
 }
 #upcoming_placeholder{
+}
+.clockpicker-popover, .select2-dropdown{
+    z-index: 2300 !important;
+}
+.select2{
+    width: 100% !important;
+}
+.select2-container--default .select2-selection--single, .select2-container--default .select2-selection--multiple {
+    background-color: #FFFFFF !important;
+    background-image: none !important;
+    border: 1px solid #e5e6e7 !important;
+    border-radius: 1px !important;
+    color: inherit !important;
+    display: block !important;
+    padding: 6px 12px !important;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s !important;
+    width: 100% !important;
+    font-size: 14px !important;
+    border-radius: 0px !important;
+    height: 40px !important;
+    border-left: 3px solid #1ab394 !important;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice{
+    margin-top: 2px !important;
+}
+.select2-selection__arrow{
+    height: 40px !important;
 }
 @media (max-width: 768px){
     .vertical-timeline-content{
