--- a/flock/templates/index.html
+++ b/flock/templates/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Flock | Dashboard</title>
     <link href="css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -16,6 +15,9 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
+    <link href="css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+    <link href="css/plugins/clockpicker/clockpicker.css" rel="stylesheet">
+    <link href="css/plugins/select2/select2.min.css" rel="stylesheet">
 </head>
 
 <body class="top-navigation">
@@ -27,7 +29,7 @@
                     <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
                         <i class="fa fa-reorder"></i>
                     </button>
-                    <a href="#" class="navbar-brand">
+                    <a class="navbar-brand" href="#dashboard" onclick="dashboard()">
                         Flock
                     </a>
                 </div>
@@ -105,31 +107,26 @@
 
     <div id="tmpl_holder"></div>
 
-    <!-- Mainly scripts -->
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/handlebars-v3.0.3.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-
-    <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
-
-    <!-- jQuery UI -->
     <script src="js/plugins/jquery-ui/jquery-ui.min.js"></script>
     <script src="js/plugins/iCheck/icheck.min.js"></script>
-
     <script src="js/plugins/toastr/toastr.min.js"></script>
-
     <script src="js/helpers.js"></script>
     <script src="js/main.js"></script>
     <script src="js/handlebars_helpers.js"></script>
-
     <script src="js/plugins/sweetalert/sweetalert.min.js"></script>
+    <script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
     <script src="js/moment.min.js"></script>
     <script src="js/fullcalendar.js"></script>
     <script src="js/jquery.fileupload.js"></script>
     <script src="js/jquery.qtip.min.js"></script>
+    <script src="js/plugins/clockpicker/clockpicker.js"></script>
+    <script src="js/plugins/select2/select2.full.min.js"></script>
 </body>
 </html>
