--- a/flock/static/css/style.css
+++ b/flock/static/css/style.css
@@ -8395,12 +8395,14 @@ body.md-skin {
 .fc-month-view .event_people, .fc-agendaWeek-view .event_people{
     display: none;
 }
-.fc-event.hover{
-    background-color: #17A689 !important;
-    border-color: #17A689 !important;
+.fc-event.faded{
+    background-color: #57C9B2 !important;
+    border-color: #57C9B2 !important;
 }
 .fc-event.active{
+    background-color: #17A689 !important;
     font-weight: normal !important;
+    font-size: 1em;
     z-index: 200 !important;
     opacity: 1 !important;
     min-height: 90px;
