--- a/flock/templates/login.html
+++ b/flock/templates/login.html
@@ -8,12 +8,12 @@
 
     <title>Flock | Login</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/login.css" rel="stylesheet">
+    <link href="../css/animate.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/login.css" rel="stylesheet">
 
 </head>
 
@@ -22,12 +22,18 @@
     <div class="middle-box text-center loginscreen animated fadeInDown">
         <div>
             <div>
-                <img class="logo-img" alt="image" class="img-circle" src="img/wing-grey-rotate.png">
+                <img class="logo-img" alt="image" class="img-circle" src="../img/wing-grey-rotate.png">
                 <h1 class="logo-name">
                     Flock
                 </h1>
             </div>
             <h3>Welcome to Flock</h3>
+            {%if error_msg%}
+                <div id="server_error" class="alert alert-danger" role="alert">{{ error_msg }}</div>
+            {% endif %}
+            {%if info_msg%}
+                <div id="server_info" class="alert alert-success" role="alert">{{ info_msg }}</div>
+            {% endif %}
             <div id="wrong" class="alert alert-danger" role="alert"></div>
             <form id="login_form" class="m-t" onsubmit="event.preventDefault(); login();" data-toggle="validator">
                 <div class="form-group">
@@ -37,9 +43,9 @@
                     <input id="password" type="password" class="form-control" placeholder="Password" required="">
                 </div>
                 <button id="submit" class="btn btn-primary block full-width m-b">Login</button>
-                <a href="forgot_password"><small>Forgot password?</small></a>
+                <a href="../forgot_password"><small>Forgot password?</small></a>
                 <p class="text-muted text-center"><small>Do not have an account?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="registration">Create an account</a>
+                <a class="btn btn-sm btn-white btn-block" href="../registration">Create an account</a>
             </form>
             <p class="m-t"> <small>© 2016 Flock</small> </p>
             <div class="sk-spinner sk-spinner-three-bounce">
@@ -51,14 +57,14 @@
     </div>
 
     <!-- Mainly scripts -->
-    <script src="js/jquery-2.1.1.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/jquery-2.1.1.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <script>
         function login(){
             $('.sk-spinner').show();
             $('.form-group').css('opacity', '0.6');
             $.ajax({
-                url: 'login_user',
+                url: '../login_user',
                 type: 'post',
                 data: {
                     'mail': $('#mail').val(),
@@ -67,6 +73,8 @@
                 complete: function(data) {
                     $('.sk-spinner').hide();
                     $('.form-group').css('opacity', '1');
+                    $('#server_error').hide();
+                    $('#server_info').hide();
                 },
                 success: function(data) {
                     $('#wrong').hide();
