--- a/flock/templates/index.html
+++ b/flock/templates/index.html
@@ -14,10 +14,12 @@
     <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
     <link href="css/plugins/datapicker/datepicker3.css" rel="stylesheet">
     <link href="css/plugins/clockpicker/clockpicker.css" rel="stylesheet">
+
     <link href="css/plugins/select2/select2.min.css" rel="stylesheet">
+    <link href="css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
+    <link href="css/plugins/chosen/chosen.css" rel="stylesheet">
 </head>
 
 <body class="top-navigation">
@@ -131,6 +133,8 @@
     <script src="js/jquery.fileupload.js"></script>
     <script src="js/jquery.qtip.min.js"></script>
     <script src="js/plugins/clockpicker/clockpicker.js"></script>
+
+    <script src="js/plugins/chosen/chosen.jquery.js"></script>
     <script src="js/plugins/select2/select2.full.min.js"></script>
 </body>
 </html>
