--- a/flock/templates/login.html
+++ b/flock/templates/login.html
@@ -37,7 +37,7 @@
             <div id="wrong" class="alert alert-danger" role="alert"></div>
             <form id="login_form" class="m-t" onsubmit="event.preventDefault(); login();" data-toggle="validator">
                 <div class="form-group">
-                    <input id="mail" type="email" class="form-control" placeholder="Email" required="">
+                    <input id="email" type="email" class="form-control" placeholder="Email" required="">
                 </div>
                 <div class="form-group">
                     <input id="password" type="password" class="form-control" placeholder="Password" required="">
@@ -67,7 +67,7 @@
                 url: '../login_user',
                 type: 'post',
                 data: {
-                    'mail': $('#mail').val(),
+                    'email': $('#email').val(),
                     'password': $('#password').val(),
                 },
                 complete: function(data) {
