Hide Registration/Login spinner for the moment. Fix registration bug.

--- a/flock/static/css/login.css
+++ b/flock/static/css/login.css
@@ -1,7 +1,8 @@
 .sk-spinner{
     display: none;
-    position: relative;
-    bottom: 230px;
+    position: absolute;
+    top: 175px;
+    left: 38%;
 }
 #wrong{
     display: none;
