--- a/flock/templates/login.html
+++ b/flock/templates/login.html
@@ -61,8 +61,9 @@
     <script src="../js/bootstrap.min.js"></script>
     <script>
         function login(){
-            $('.sk-spinner').show();
-            $('.form-group').css('opacity', '0.6');
+            // $('.sk-spinner').show();
+            $('.form-group').css('opacity', '0.4');
+            $('#submit').css('opacity', '0.4');
             $.ajax({
                 url: '../login_user',
                 type: 'post',
@@ -71,8 +72,9 @@
                     'password': $('#password').val(),
                 },
                 complete: function(data) {
-                    $('.sk-spinner').hide();
+                    // $('.sk-spinner').hide();
                     $('.form-group').css('opacity', '1');
+                    $('#submit').css('opacity', '1');
                     $('#server_error').hide();
                     $('#server_info').hide();
                 },
