--- a/flock/templates/register.html
+++ b/flock/templates/register.html
@@ -30,7 +30,7 @@
                     <input id="name" type="text" class="form-control" placeholder="Name" required="">
                 </div>
                 <div class="form-group">
-                    <input id="mail" type="email" class="form-control" placeholder="Email" required="">
+                    <input id="email" type="email" class="form-control" placeholder="Email" required="">
                 </div>
                 <div class="form-group">
                     <input id="password" type="password" class="form-control" placeholder="Password" required="">
@@ -63,20 +63,22 @@
     <script>
         function register(){
             if( $('input:checkbox').is(':checked') ){
-                $('.sk-spinner').show();
-                $('.form-group').css('opacity', '0.6');
+                // $('.sk-spinner').show();
+                $('.form-group').css('opacity', '0.4');
+                $('#submit').css('opacity', '0.4');
                 $.ajax({
                     url: 'register',
                     type: 'post',
                     data: {
-                        'mail': $('#mail').val(),
+                        'email': $('#email').val(),
                         'password': $('#password').val(),
                         'name': $('#name').val(),
                         'company': $('#company').val(),
                     },
                     complete: function(data) {
-                        $('.sk-spinner').hide();
+                        // $('.sk-spinner').hide();
                         $('.form-group').css('opacity', '1');
+                        $('#submit').css('opacity', '1');
                     },
                     success: function(data) {
                         $('#wrong').hide();
