--- a/flock/static/css/style.css
+++ b/flock/static/css/style.css
@@ -8709,16 +8709,21 @@ ul.slim-dropdown-menu .label{
     left: 3px !important;
 }
 .val_error{
-    z-index: 100;
+    z-index: 10000 !important;
     color: #1ab394;
-    display: inline-block ;
-    margin-left: 5px;
+    display: none;
     position: absolute;
     right: 6%;
-    line-height: 270%;
-    top: 12%;
-    font-weight: normal;
+    top: 73%;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 1px 8px;
+    height: 30px;
+    line-height: 27px;
+    border-radius: 3px;
+    box-shadow: 2px 2px 5px #888888;
 }
 .val_error i{
-    padding-left: 3px;
+    padding-right: 6px;
+    font-size: 1.2em;
 }
