--- a/flock/static/css/style.css
+++ b/flock/static/css/style.css
@@ -8381,15 +8381,12 @@ body.md-skin {
 }
 .event_details{
     width: 100%;
-    height: 200px;
-    display: none;
-}
-.fc-month-view .event_people, .fc-agendaWeek-view .event_people{
     display: none;
 }
 .fc-event.faded{
     background-color: #57C9B2 !important;
     border-color: #57C9B2 !important;
+    z-index: 100 !important;
 }
 .fc-event.active{
     background-color: #17A689 !important;
@@ -8397,9 +8394,6 @@ body.md-skin {
     font-size: 1em;
     z-index: 200 !important;
     opacity: 1 !important;
-    min-height: 120px;
-    min-width: 200px;
-
 }
 .fc-event.active .event_people, .fc-event .event_place{
     display: none;
@@ -8410,9 +8404,46 @@ body.md-skin {
     top: 15px;
     right: 10px;
 }
+.fc-event.active .event_tip_wrapper{
+    display: block;
+}
 .fc-event.active .event_details{
     display: block;
 }
+/* Day View */
+.fc-agendaDay-view .fc-event.active{
+    /*min-height: 120px;*/
+    /*min-width: 200px;*/
+}
+.fc-agendaDay-view .fc-event.active .event_details_place{
+    display: none;
+}
+
+/* Week View */
+.fc-agendaWeek-view .event_people{
+    display: none;
+}
+.fc-agendaWeek-view .fc-event.active{
+    position: absolute !important;
+    left: 0 !important;
+    right: 0 !important;
+    /*height: 150px;*/
+}
+.fc-agendaWeek-view .fc-event.active .event_details_description{
+    display: none;
+}
+.fc-agendaWeek-view .fc-event.active .event_place{
+    display: none;
+}
+
+/* Month View */
+.fc-month-view .fc-event.active .event_place{
+    display: none;
+}
+.fc-month-view .event_people{
+    display: none;
+}
+
 .event_tip{
     background-color: white;
     padding: 0px;
@@ -8420,13 +8451,9 @@ body.md-skin {
 .event_details div{
     margin-top: 10px;
 }
-.event_tip .event_details_people{
-    float: right;
-}
-.event_tip .event_details_person{
-    margin-bottom: 2px;
+.event_tip_wrapper .event_details_person{
+    margin-bottom: 1px !important;
     display: inline-block;
-    float: right;
 }
 .event_tip .event_title{
     margin-top: 5px;
@@ -8620,12 +8647,12 @@ ul.slim-dropdown-menu .label{
     margin-bottom: 50px;
 }
 #add_event_btn{
-    position: absolute;
-    top: -4px;
+    display: inline-block;
+    float: left;
+    margin-right: 15px;
 }
 #calendar_wrap .fc-left{
-    position: relative;
-    left: 128px;
+    display: inline-block;
 }
 .widget-placeholder{
     margin-bottom: 30px;
@@ -8678,8 +8705,8 @@ ul.slim-dropdown-menu .label{
     .vertical-timeline-icon, .vertical-timeline-content h2 > span, .vertical-timeline-content::before{
         display: none;
     }
-    .fc-center, .fc-right, .fc-left, .fc-center{
-        display: none;
+    .fc-center, .fc-right, .fc-left{
+        display: none !important;
     }
     #places_tab, #people_tab, #system_tab{
         display: none;
@@ -8687,6 +8714,10 @@ ul.slim-dropdown-menu .label{
     #add_event_modal .modal-dialog{
         width: 600px;
     }
+}
+.fc-center{
+    position: relative;
+    right: 50px;
 }
 @media (min-width: 1200px){
     #add_event_modal .modal-dialog{
