--- a/flock/static/css/style.css
+++ b/flock/static/css/style.css
@@ -1183,7 +1183,7 @@ button.dim:active:before {
   border: 1px solid #CBD5DD;
   border-radius: 2px;
   cursor: text;
-  height: auto !important;
+  /*height: auto !important;*/
   margin: 0;
   min-height: 30px;
   overflow: hidden;
@@ -8736,8 +8736,15 @@ ul.slim-dropdown-menu .label{
 }
 .chosen-single span{
     position: relative !important;
-    top: 2px !important;
+    top: 1px !important;
     left: 3px !important;
+}
+a.chosen-single, .chosen-choices{
+    height: 46px !important;
+    line-height: 42px !important;
+}
+.chosen-container-single .chosen-single div b {
+    background-position-y: 12px !important;
 }
 .val_error{
     z-index: 10000 !important;
