Fix for forgotten password bug

--- a/flock/templates/forgot_password.html
+++ b/flock/templates/forgot_password.html
@@ -61,7 +61,7 @@
                 url: 'reset_user',
                 type: 'post',
                 data: {
-                    'mail': $('#mail').val()
+                    'email': $('#mail').val()
                 },
                 complete: function(data) {
                     $('.sk-spinner').hide();
