--- a/flock/templates/forgot_password.html
+++ b/flock/templates/forgot_password.html
@@ -55,8 +55,8 @@
     <script src="js/jquery-2.1.1.js"></script>
     <script>
         function reset_user(){
-            $('.sk-spinner').show();
-            $('.form-group').css('opacity', '0.6');
+            // $('.sk-spinner').show();
+            $('.form-group').css('opacity', '0.4');
             $.ajax({
                 url: 'reset_user',
                 type: 'post',
@@ -64,8 +64,7 @@
                     'email': $('#mail').val()
                 },
                 complete: function(data) {
-                    $('.sk-spinner').hide();
-                    $('.form-group').css('opacity', '1');
+                    // $('.sk-spinner').hide();
                 },
                 success: function(data) {
                     $('#wrong').hide();
@@ -74,6 +73,7 @@
                 },
                 error: function(data) {
                     $('#right').hide();
+                    $('.form-group').css('opacity', '1');
                     $('#wrong').text(data.responseText.replace('</p>', '').split('<p>').slice(-1)[0]).fadeIn();
                 }
             });
