--- a/flock/templates/index.html
+++ b/flock/templates/index.html
@@ -13,6 +13,7 @@
     <link href="css/plugins/toastr/toastr.min.css" rel="stylesheet">
     <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
+    <link href="css/jquery.fileupload.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/plugins/datapicker/datepicker3.css" rel="stylesheet">
     <link href="css/plugins/clockpicker/clockpicker.css" rel="stylesheet">
