--- a/flock/templates/index.html
+++ b/flock/templates/index.html
@@ -66,6 +66,7 @@
                         {% endif %}
                     </ul>
                     <ul class="nav navbar-top-links navbar-right">
+                        <img alt="image" class="img-circle" style="height: 30px; margin-right: 5px;" src="{{ image }}">
                         <li id="account" class="dropdown account-info" user_id="{{ user_id }}" permissions="{{ permissions }}">
                             <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <span>{{ user_name }}</span>
