--- a/flock/templates/email.html
+++ b/flock/templates/email.html
@@ -348,6 +348,11 @@
                             <td class="aligncenter content-block">Flock HQ, 9 Thomas Court, Dublin 8</td>
                         </tr>
                     </table>
+                    <table width="100%">
+                        <tr>
+                            <td class="aligncenter content-block"><a href="http://app.tryflock.com/unsubscribe">Unsubscribe</a></td>
+                        </tr>
+                    </table>
                 </div></div>
         </td>
         <td></td>
